<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/butto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDF8E3"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeMessageMorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:fontFamily="@font/gilroybold"
            android:text="@string/welcome_message_morning"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessageMorning">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:backgroundTint="#FFFFFF"
                        android:fontFamily="@font/gilroybold"

                        android:text="@string/event_type_all"
                        android:textColor="#000000" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_education" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_games" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_music" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_sports" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_Travel" />

                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/side_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:backgroundTint="#D0ABFF"
            android:contentDescription="@string/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/white"
            app:srcCompat="@drawable/arrow_pointing_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>