<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDF8E3"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeMessageMorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:fontFamily="@font/gilroybold"
            android:text="@string/welcome_message_morning"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#292D30"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessageMorning">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:fontFamily="@font/gilroybold"

                        android:text="@string/event_type_all" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_education" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_games" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_music" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_sports" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/event_type_Travel" />

                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            tools:context=".MapsActivity" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/mainFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fab_addButtonColorNormal="#D0ABFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/addFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/plus_sign"
                app:fab_colorNormal="#5A35FF">

            </com.getbase.floatingactionbutton.FloatingActionButton>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/viewFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eye_view"
                app:fab_colorNormal="#FFDC50">

            </com.getbase.floatingactionbutton.FloatingActionButton>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>