<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="480dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="305dp"
        android:layout_height="455dp"
        android:background="@drawable/white_box"
        android:backgroundTint="#66292D30"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:background="@drawable/white_box"
        android:outlineAmbientShadowColor="@color/black_light"
        android:outlineSpotShadowColor="@color/black_light"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:fontFamily="@font/gilroybold"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/h1_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/side_margin"
        android:fontFamily="@font/gilroybold"
        android:text="@string/name"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottom_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@null"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/gilroylight"
        android:singleLine="false"
        android:text="@string/terry_meyer"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:fontFamily="@font/gilroybold"
        android:text="@string/last_name"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_profile_surename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottom_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@null"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/gilroylight"
        android:singleLine="false"
        android:text="@string/terry_meyer"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:fontFamily="@font/gilroybold"
        android:text="@string/email"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_surename" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottom_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@null"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/gilroylight"
        android:singleLine="false"
        android:text="@string/terry_meyer"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:fontFamily="@font/gilroybold"
        android:text="@string/password"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_profile_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottom_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@null"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/gilroylight"
        android:singleLine="false"
        android:text="@string/terry_meyer"
        android:textColor="@color/black_light"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:backgroundTint="@color/purple_strong"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/purple_light"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5" />

</androidx.constraintlayout.widget.ConstraintLayout>