<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDF8E3">

    <TextView
        android:id="@+id/signup_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="246dp"
        android:fontFamily="@font/gilroybold"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="@dimen/h1_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_top_imageView" />

    <TextView
        android:id="@+id/or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gilroybold"
        android:text="@string/or"
        android:textColor="#6A6A6A"
        android:textSize="@dimen/h2_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <ImageView
        android:id="@+id/login_top_imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_signup_top_design" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/side_margin"
        android:focusable="true"
        android:fontFamily="@font/gilroylight"
        android:hint="@string/username"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textColorHighlight="#6A6A6A"
        android:textColorHint="#6A6A6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_textView"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_signup"
        android:layout_alignEnd="@+id/username_signup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/gilroylight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#6A6A6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginBottom="@dimen/side_margin"
        android:background="@drawable/rounded_button_purpule"
        android:fontFamily="@font/gilroybold"
        android:text="@string/login"
        android:textSize="@dimen/t1_size"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginBottom="30dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/gilroylight"
        android:text="@string/signup"
        android:textColor="#6A6A6A"
        android:textSize="@dimen/t1_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/meet_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>